syntax = "proto3";

package pb;
option go_package = "github.com/chhongzh/chz_Base_Backend/pkg/pb";

message HasPermissionResponse {
    bool hasPermission = 1;
}
